--- a/chronam/web/templates/search_titles.html
+++ b/chronam/web/templates/search_titles.html
@@ -83,6 +83,7 @@
             <option>1990</option> 
             <option>2000</option>
             <option>2009</option>
+            <option>2010</option>
         </select>
 
         <label for="year2">To:</label>
@@ -119,7 +120,8 @@
             <option>1980</option>
             <option>1990</option> 
             <option>2000</option>
-            <option selected="selected">2009</option>
+            <option>2010</option>
+            <option selected="selected">2010</option>
         </select> 
     </fieldset>
         <h2>Enter keywords to search:</h2>
