--- a/chronam/web/templates/search_pages.html
+++ b/chronam/web/templates/search_pages.html
@@ -113,10 +113,10 @@ text-align:center;
             <label for="id_andtext">...with <b>all</b> of the words: </label>
             {{search_form.andtext}}
             <br /><br />
-            <label for="id_phrasetext">...with the <b>exact phrase </b></label>
+            <label for="id_phrasetext">...with the <b>phrase</b>: </label>
             {{search_form.phrasetext}}
             <br /><br />
-            <label for="id_proxtext">...with the words </label>
+            <label for="id_proxtext">...with the words: </label>
             {{search_form.proxtext}} 
             <label for="id_proxdistance">within</label>
             {{search_form.proxdistance}} 
