--- a/chronam/web/templates/help.html
+++ b/chronam/web/templates/help.html
@@ -17,23 +17,33 @@
 <br/>
 <p class="help">Chronicling America is part of a phased project called the National Digital Newspaper Program (NDNP). This program, funded by the National Endowment for the Humanties (NEH), awards money to public newspaper archives in each state to digitize and deliver historic newspaper content to the Library of Congress for inclusion in Chronicling America. Listed below are the state and territories currently participating in the program and the date range for content they will provide*. Eventually, the NEH will fund awards in every state and territory.</p>
 <ul>
-<li>Arizona, 1880-1922</li>
-<li>California, 1880-1910</li>
+<li>Arizona, 1836-1922</li>
+<li>California, 1860-1922</li>
 <li>Florida, 1900-1910</li>
-<li>Hawaii, 1880-1922</li>
-<li>Kentucky, 1880-1910</li>
-<li>Minnesota, 1880-1910</li>
-<li>Missouri, 1880-1922</li>
-<li>Nebraska, 1880-1910</li>
-<li>New York, 1880-1910</li>
-<li>Ohio, 1880-1922</li>
-<li>Pennsylvania, 1880-1922</li>
-<li>Texas, 1880-1910</li>
-<li>Utah, 1880-1910</li>
-<li>Virginia , 1880-1910</li>
-<li>Washington, 1880-1922</li>
+<li>Hawaii, 1836-1922</li>
+<li>Illinois, 1860-1922<li>
+<li>Kansas, 1860-1922</li>
+<li>Kentucky, 1860-1922</li>
+<li>Louisiana, 1860-1922</li>
+<li>Minnesota, 1860-1922</li>
+<li>Missouri, 1836-1922</li>
+<li>Montana, 1860-1922</li>
+<li>Nebraska, 1880-1922</li>
+<li>New Mexico, 1836-1922</li>
+<li>New York, 1880-1922</li>
+<li>Ohio, 1836-1922</li>
+<li>Oklahoma, 1860-1922</li>
+<li>Oregon, 1860-1922</li>
+<li>Pennsylvania, 1836-1922</li>
+<li>South Carolina, 1860-1922</li>
+<li>Tennessee, 1836-1922</li>
+<li>Texas, 1860-1922</li>
+<li>Utah, 1860-1922</li>
+<li>Vermont, 1836-1922</li>
+<li>Virginia , 1860-1922</li>
+<li>Washington, 1836-1922</li>
 </ul>
-<p>- In addition, the Library of Congress contributes digitized content from Washington, DC (1880-1910) and other significant material.</p>
+<p>- In addition, the Library of Congress contributes digitized content from Washington, DC (1836-1922) and other significant material.</p>
 <br/>
 <p>*Note: All dates listed may not be available at this time, but content representing these states and time periods is scheduled to be added in future quarterly updates.</p>
 <br/>
