--- a/chronam/web/templates/home.html
+++ b/chronam/web/templates/home.html
@@ -25,8 +25,9 @@
                     <a href="{% url chronam_search_pages %}" shape="rect">View
                         newspaper pages</a> from 1860 to 1922 from the following
                     states: Arizona, California, District of Columbia, Florida,
-                    Hawaii, Kentucky, Minnesota, Missouri, Nebraska, New York,
-                    Ohio, Pennsylvania, Texas, Utah, Virginia and Washington. <a href="http://www.neh.gov/projects/ndnp.html" shape="rect">Why only these states and years?</a>
+                    Hawaii, Illinois, Kansas, Kentucky, Minnesota, Missouri, 
+                    Nebraska, New York, Ohio, Oklahoma, Oregon, Pennsylvania, 
+                    Texas, Utah, Virginia and Washington. <a href="http://www.neh.gov/projects/ndnp.html" shape="rect">Why only these states and years?</a>
                 </p>
                 <div class="linkbutton">
                   <a href="{% url chronam_search_pages %}">SEARCH PAGES</a>
