cannot generate html based on user input in combination with |safe filter, or else people can execute arbitrary javascript. refs #601

--- a/chronam/web/templates/search_pages_results.html
+++ b/chronam/web/templates/search_pages_results.html
@@ -11,9 +11,10 @@
 
     <div id="searchnav">
         Your fulltext search
-        {% if english_search %}
-        for: {{ english_search|safe }}
-        {% endif %}
+        {% for part in english_search %}
+        {{ part }}
+        {% if not forloop.last %}<em>and</em>{% endif %}
+        {% endfor %}
         returned {{ paginator.count }} results
         <div>
         </div>
