lots of changes to support loading essays from html files that are located in a new repository ndnp-essays: http://rdc.lctl.gov/hg/ndnp-essays fixes #633

--- a/apps/chronam-web/chronam/web/media/css/global.css
+++ b/apps/chronam-web/chronam/web/media/css/global.css
@@ -800,6 +800,7 @@ table.data td {
     font: 70% verdana, helvetica, sans-serif;
     padding: 5px;
     border: 1px solid #ccc;
+    vertical-align: top;
 }
 
 table.data td.label {
