--- a/apps/chronam-web/chronam/web/templates/terms.html
+++ b/apps/chronam-web/chronam/web/templates/terms.html
@@ -99,6 +99,32 @@
             </tr>
         </table>
 
+        <table cellspacing="0" class="border" about="[ndnp:Essay]">
+            <tr>
+                <th colspan="2">Term Name: Essay</th>
+            </tr>
+            <tr>
+                <td class="name">URI:</td>
+                <td>http://chroniclingamerica.loc.gov/terms#Essay</td>
+            </tr>
+            <tr>
+                <td class="name">Label:</td>
+                <td property="rdfs:label">Essay</td>
+            </tr>
+            <tr>
+                <td class="name">Definition:</td>
+                <td property="dcterms:description">A document written by an NDNP awardee that describes one or more NDNP Newspaper Titles</td>
+            </tr>
+            <tr>
+                <td class="name">Type of Term:</td>
+                <td><a rel="rdf:type" href="http://www.w3.org/2000/01/rdf-schema#Class">Class</a></td>
+            </tr>
+            <tr>
+                <td class="name">Refines:</td>
+                <td><a rel="rdfs:subClassOf" href="http://xmlns.com/foaf/0.1/Document">http://xmlns.com/foaf/0.1/Document</a></td>
+            </tr>
+        </table>
+
         <table cellspacing="0" class="border" about="[ndnp:bag]">
             <tr>
                 <th colspan="2">Term Name: bag</th>
@@ -113,7 +139,7 @@
             </tr>
             <tr>
                 <td class="name">Definition:</td>
-                <td property="dcterms:description">Indicates when a batch is associated with a BagIt bag that is mounted on the web.</td>
+                <td property="dcterms:description">Indicates when a batch is associated with a BagIt bag that is mounted on the web at a URL</td>
             </tr>
             <tr>
                 <td class="name">Type of Term:</td>
