--- a/apps/chronam-web/chronam/web/templates/newspapers.html
+++ b/apps/chronam-web/chronam/web/templates/newspapers.html
@@ -48,7 +48,7 @@
                     <td><a href="{% url chronam_issues lccn %}" shape="rect"><img src="{{script_name}}/images/calendar_icon.gif" alt="calendar"/></a></td>
                     <td><a href="{% url chronam_issue_pages lccn,first_issue_date_issued,first_issue.edition %}">{{first_issue_date_issued}}</a></td>
                     <td><a href="{% url chronam_issue_pages lccn,last_issue_date_issued,last_issue.edition %}">{{last_issue_date_issued}}</a></td>
-                    <td>{% if title.has_essays %}<a href="{% url chronam_title_essays lccn %}">Yes</a>{% endif %}</td>
+                    <td>{% if title.has_essays %}<a href="{% url chronam_essay title.first_essay.id %}">Yes</a>{% endif %}</td>
                 </tr>
                   {% endwith %}
                   {% endwith %}
