--- a/apps/chronam-web/chronam/web/templates/title_essays.html
+++ b/apps/chronam-web/chronam/web/templates/title_essays.html
@@ -3,17 +3,13 @@
 {% block newspaper_content %}
 
 <p>
-This title is mentioned in several essays created on:
+This title is mentioned in several essays:
 </p>
 
 <ul>
     {% for essay in title.essays.all %}
-    <li> <a href="{{ essay.url }}">{{ essay.created|date }}</a></li>
+    <li> <a href="{{ essay.url }}">{{ essay.title }}</a></li>
     {% endfor %}
 
 
 {% endblock %}
-
-
-
-
