changed to "Provided by" where appropriate. refs #647

--- a/apps/chronam-web/chronam/web/templates/essay.html
+++ b/apps/chronam-web/chronam/web/templates/essay.html
@@ -5,7 +5,7 @@
 {{essay.html|safe}}
 
 <p>
-<em>Written by: <a href="{% url chronam_awardee essay.creator.org_code %}">{{ essay.creator }}</a></em>
+<em>Provided by: <a href="{% url chronam_awardee essay.creator.org_code %}">{{ essay.creator }}</a></em>
 </p>
 
 {% endblock %}
