--- a/apps/chronam-web/chronam/web/templates/essays.html
+++ b/apps/chronam-web/chronam/web/templates/essays.html
@@ -3,7 +3,7 @@
 {% block box_right %}
 
 <p>
-Below is a list of essays written by NDNP Awardees about newspapers that
+Below is a list of essays provided by NDNP Awardees about newspapers that
 are available in Chronicling America.
 </p>
 
