'fixed' spacing issue

--- a/apps/chronam-web/chronam/web/templates/home.html
+++ b/apps/chronam-web/chronam/web/templates/home.html
@@ -65,7 +65,7 @@
                   <a href="{% url chronam_search_titles %}">SEARCH DIRECTORY</a>
                 </div>
             </div>
-            <br />
+            <br /><p>&nbsp;</p>
             <div class="summary">
                 <p>
                 <span style="font-weight: bold; font-size: larger">Working With Chronicling America</span>
