--- a/apps/chronam-web/chronam/web/templates/batches.xml
+++ b/apps/chronam-web/chronam/web/templates/batches.xml
@@ -16,6 +16,7 @@
         <title>{{batch.name}}</title>
         <link rel="alternate" type="text/html" href="{% url chronam_batch batch.name %}" />
         <link rel="alternate" type="application/rdf+xml" href="{% url chronam_batch_dot_rdf batch.name %}" />
+        <link rel="alternate" type="application/json" href="{% url chronam_batch_dot_json batch.name %}" />
         <id>info:lc/ndnp/batch/{{batch.name}}</id>
         <author><name>{{batch.awardee.name}}</name></author>
         <updated>{% if batch.released %}{{ batch.released|rfc3339 }}{% else %}{{ batch.created|rfc3339 }}{% endif %}</updated>
