--- a/apps/chronam-web/chronam/web/templates/states.html
+++ b/apps/chronam-web/chronam/web/templates/states.html
@@ -1,5 +1,7 @@
 {% extends "site.html" %}
 
+{% load custom_filters %}
+
 {% block more_style %}
 <link rel="alternate" type="application/json" href="{% url chronam_states_json 'json' %}" />
 {% endblock %}
