--- a/apps/chronam-web/chronam/web/templates/counties.html
+++ b/apps/chronam-web/chronam/web/templates/counties.html
@@ -1,5 +1,7 @@
 {% extends "site.html" %}
 
+{% load custom_filters %}
+
 {% block more_style %}
 <link rel="alternate" type="application/json" href="{% url chronam_counties_in_state_json state|pack_url 'json' %}" />
 {% endblock %}
