added awardees json view for esssay editor. fixes #675

--- a/apps/chronam-web/chronam/web/templates/awardees.html
+++ b/apps/chronam-web/chronam/web/templates/awardees.html
@@ -1,8 +1,11 @@
 {% extends "site.html" %}
 {% load humanize %}
 
-{% block box_right %}
+{% block extra_link_types %}
+<link rel="alternate" type="application/json" href="{% url chronam_awardees_json %}" tite="Atom Feed" />
+{% endblock %}
 
+{% block box_right %}
 <p>
 Below is a list of NDNP Awardees that have content in the Chronicling 
 America Web Application. Clicking on the name will bring you to a 
