--- a/apps/chronam-web/chronam/web/templates/reel.html
+++ b/apps/chronam-web/chronam/web/templates/reel.html
@@ -10,22 +10,28 @@
 
 <table class="data">
     <tr class="lightGray">
-        <td>Batch:</td>
+        <th>Batch</th>
+        <th>Title</th>
+    </tr>
+
+    {% for reel in reels %}
+    <tr class="{% cycle 'lightGray' 'white' %}">
         <td>
             <a href="{% url chronam_batch reel.batch.name %}">
                 {{ reel.batch.name }}
             </a>
         </td>
-    </tr>
-    <tr class="lightGray">
-        <td>LCCNs In Reel:</td>
         <td>
             {% for title in reel.titles %}
             <a href="{% url chronam_title title.lccn %}">{{ title.name }} ({{title.lccn}})</a> 
             {% endfor %}
         </td>
     </tr>
+    {% endfor %}
+
 </table>
+
+<br />
 
 {% endblock %}
 
