--- a/apps/chronam-web/chronam/web/templates/newspapers_state.html
+++ b/apps/chronam-web/chronam/web/templates/newspapers_state.html
@@ -6,7 +6,6 @@
 
             <p>These historic newspapers are available to read online in Chronicling America at the Library of Congress.</p>
 
-<p>{{state}} newspaper pages currently available: {{number_of_pages}}</p>
             <table class="data" border="0" width="100%">
                 <tr>
                     <th>Newspaper</th>
@@ -19,8 +18,8 @@
                 <tr class="{% cycle 'lightGray' 'white' %}">
                     <td><a href="{% url chronam_title title.lccn %}">{{title}}</a></td>
                     <td><a href="{% url chronam_issues title.lccn %}" shape="rect"><img src="{{script_name}}/images/calendar_icon.gif" alt="calendar"/></a></td>
-                    <td><a href="{% url chronam_issue_pages title.lccn,title.first_issue.date_issued,title.first_issue.edition %}">{{title.first_issue.date_issued}}</a></td>
-                    <td><a href="{% url chronam_issue_pages title.lccn,title.last_issue.date_issued,title.last_issue.edition %}">{{title.last_issue.date_issued}}</a></td>
+                    <td><a href="{% url chronam_issue_pages title.lccn,title.first,1 %}">{{title.first}}</a></td>
+                    <td><a href="{% url chronam_issue_pages title.lccn,title.last,1 %}">{{title.last}}</a></td>
                     <td>{% if title.has_essays %}<a href="{% url chronam_title_essays title.lccn %}">Yes</a>{% endif %}</td>
                 </tr>
                 {% endfor %}
