--- a/apps/chronam-web/chronam/web/templates/about_api.html
+++ b/apps/chronam-web/chronam/web/templates/about_api.html
@@ -59,6 +59,11 @@ issues, editions, and pages.
 </p>
 
 <p>
+<a href="#awardees">Awardee Data Deliveries</a>
+are available to the public in raw and summary form.
+</p>
+
+<p>
 <a href="#linked-data">Linked Data</a> views of information 
 about titles, batches, issues, and pages in RDF/XML.
 </p>
@@ -247,6 +252,16 @@ third available page from first edition, January 5, 1900
 
 </ul>
 
+<a name="awardees"></a>
+<h2>Awardee Data Deliveries</h2>
+
+<p>
+<a href="/awardees">Awardees</a> are the organizations that deliver batches
+of digitized newspaper pages to the Library of Congress.  A
+<a href="/batches/">batch</a> consists of a unit of work, usually several
+thousand pages, which is made available via the website, in raw form, and
+via the search engine.
+</p>
 <a name="linked-data"></a>
 <h2>Linked Data</h2>
 
