refs #1177.  added easter egg views for languages

--- a/core/templates/reports/reports.html
+++ b/core/templates/reports/reports.html
@@ -51,6 +51,9 @@
     <tr class='lightGray'>
         <td><a href="{% url chronam_terms %}">Terms</td>
     </tr>
+    <tr class='white'>
+        <td><a href="{% url chronam_languages %}">Languages View</td>
+    </tr>
 </table>
 
 {% endblock %}
