refs #1160.  updated about_api text

--- a/core/templates/about_api.html
+++ b/core/templates/about_api.html
@@ -83,8 +83,8 @@ search for &quot;michigan&quot;, Atom response
 search for &quot;michigan&quot;, JSON response, starting at page 5
 </li> 
 </ul> 
-<p>There are more than a million <a
-href="/search/pages/"> digitized
+<p>There are millions of <a
+href="/search/pages/">digitized
 newspaper pages</a> in Chronicling America.  These pages span
 several decades and many U.S. states and territories.  New batches of
 data come in from partner institutions throughout the year and are
