refs #1124 fixed url for guidelines in about page

--- a/core/templates/about.html
+++ b/core/templates/about.html
@@ -19,7 +19,7 @@
   <p>Each NDNP participant receives an award to select and digitize approximately 100,000 newspaper pages representing that state's regional history, geographic coverage, and events of the particular time period being covered. In order to plan for phased development, the annual award program began with targeting digitized material for the decade 1900-1910. In subsequent award years, the time period was gradually extended decade by decade, to cover the historic period 1836-1922.
   <p>Participants are expected to digitize primarily from microfilm holdings for reasons of efficiency and cost, encouraging selection of technically-suitable film, bibliographic completeness, diversity and
   &quot;orphaned&quot; newspapers (newspapers that have ceased publication and lack active ownership) in order to decrease the likelihood of duplicative digitization by other organizations.</p>
-  <p>These newspaper materials were digitized to technical specifications designed by the Library of Congress. These specifications include the following basic elements (profiles describing the full set of specifications can be found at <a href="http://www.loc.gov/ndnp/techspecs.html" shape="rect">http://www.loc.gov/ndnp/techspecs.html</a>) : </p>
+  <p>These newspaper materials were digitized to technical specifications designed by the Library of Congress. These specifications include the following basic elements (profiles describing the full set of specifications can be found at <a href="http://www.loc.gov/ndnp/guidelines/" shape="rect">http://www.loc.gov/ndnp/guidelines/</a>) : </p>
   <ul>
 
   <li>TIFF 6.0, 8-bit grayscale, 400 dpi, uncompressed, with specified tag values</li>
